Remove deprecation and unchecked warnings (#5)
* Remove test deprecation warnings

* Remove unchecked warnings from tests

* Replace Runtime.exec() with ProcessBuilder

* Replace getId() with threadId()

* Replace isAccessible() with canAccess(obj)

* Resolve URL related deprecation warnings

* Replace getPackage() with getDefinedPackage()

* Remove unchecked warnings

* Enable compiler warnings in build.gradle

* Document the current state of regrtest