@@ -414,8 +414,8 @@ public class PrePy {
                     Matcher m = p.matcher(path);
                     if (m.find()) {
                         // path contains the target class in a JAR (named in group 1).
-                        // Make a file URL from all the text up to the end of group 1.
-                        fileURI = new URL("file:" + path.substring(0, m.end(1))).toURI();
+                        // Make a file URI from all the text up to the end of group 1.
+                        fileURI = new URI("file:" + path.substring(0, m.end(1)));
                     }
                     break;
 
@@ -435,28 +435,28 @@ public class PrePy {
     }
 
     /**
-     * If the argument is a {@code jar:file:} or {@code file:} URL, compensate for a bug in Java's
-     * construction of URLs affecting {@code java.io.File} and {@code java.net.URLConnection} on
-     * Windows. This is a helper for {@link #getJarFileNameFromURL(URL)}.
+     * If the argument is a {@code jar:file:} or {@code file:} URL, compensate for a bug in Java's construction of URLs
+     * affecting {@code java.io.File} and {@code java.net.URLConnection} on Windows. This is a helper for
+     * {@link #getJarFileNameFromURL(URL)}.
      * <p>
-     * This bug bites when a JAR file is at a (Windows) UNC location, and a {@code jar:file:} URL is
-     * derived from {@code Class.getResource()} as it is in {@link #_getJarFileName()}. When URL is
-     * supplied to {@link #getJarFileNameFromURL(URL)}, the bug leads to a URI that falsely treats a
-     * server as an "authority". It subsequently causes an {@code IllegalArgumentException} with the
-     * message "URI has an authority component" when we try to construct a File. See
-     * {@link https://bugs.java.com/view_bug.do?bug_id=6360233} ("won't fix").
+     * This bug bites when a JAR file is at a (Windows) UNC location, and a {@code jar:file:} URL is derived from
+     * {@code Class.getResource()} as it is in {@link #_getJarFileName()}. When URL is supplied to
+     * {@link #getJarFileNameFromURL(URL)}, the bug leads to a URI that falsely treats a server as an "authority". It
+     * subsequently causes an {@code IllegalArgumentException} with the message "URI has an authority component" when we
+     * try to construct a File. See {@link https://bugs.java.com/view_bug.do?bug_id=6360233} ("won't fix").
      *
-     * @param url Possibly malformed URL
+     * @param url
+     *            Possibly malformed URL
      * @return corrected URL
      */
-    private static URL tweakWindowsFileURL(URL url) throws MalformedURLException {
+    private static URL tweakWindowsFileURL(URL url) throws MalformedURLException, URISyntaxException {
         String urlstr = url.toString();
         int fileIndex = urlstr.indexOf("file://"); // 7 chars
         if (fileIndex >= 0) {
             // Intended UNC path. If there is no slash following these two, insert "/" here:
             int insert = fileIndex + 7;
             if (urlstr.length() > insert && urlstr.charAt(insert) != '/') {
-                url = new URL(urlstr.substring(0, insert) + "//" + urlstr.substring(insert));
+                url = new URI(urlstr.substring(0, insert) + "//" + urlstr.substring(insert)).toURL();
             }
         }
         return url;
